[package]
name = "gpiod"
description = "Linux GPIO character device interfacing"
version = "0.2.0"
authors = ["K. <kayo@illumium.org>"]
license = "MIT"
readme = "README.md"
categories = ["os", "os::linux-apis"]
keywords = ["libgpiod", "GPIO", "Linux", "chardev", "ioctl"]
edition = "2021"

[workspace]
members = ["core", "cli", "tokio", "async-std"]

[dependencies.gpiod-core]
path = "core"
version = "0.2.0"
default-features = false

[features]
default = ["v2"]
v2 = ["gpiod-core/v2"]
