[package]
name = "gpiod"
description = "Linux GPIO character device interfacing"
version = "0.2.3"
authors = ["K. <kayo@illumium.org>"]
license = "MIT"
readme = "README.md"
categories = ["os", "os::linux-apis"]
keywords = ["libgpiod", "GPIO", "Linux", "chardev", "ioctl"]
edition = "2021"

[workspace]
members = ["core", "tokio", "async-std", "cli", "cli/tokio", "cli/async-std"]

[dependencies.gpiod-core]
path = "core"
version = "0.2.3"
default-features = false

[features]
default = ["v2"]
v2 = ["gpiod-core/v2"]
clap = ["gpiod-core/clap"]
serde = ["gpiod-core/serde"]
