[package]
name = "async-std-gpiod"
description = "Linux GPIO character device interfacing with async-std"
version = "0.2.0"
authors = ["K. <kayo@illumium.org>"]
license = "MIT"
readme = "README.md"
categories = ["os", "os::linux-apis", "asynchronous"]
keywords = ["libgpiod", "GPIO", "Linux", "async", "async-std"]
edition = "2021"

[dependencies.gpiod-core]
path = "../core"
version = "0.2.0"
default-features = false

[dependencies.async-io]
version = "1"

[dependencies.async-std]
version = "1"

[features]
default = ["v2"]
v2 = ["gpiod-core/v2"]
