[package]
name = "gpiod-cli"
description = "Linux GPIO character device interfacing (utils)"
version = "0.2.0"
authors = ["Joao Rebelo <2730147+jrebelo@users.noreply.github.com>", "K. <kayo@illumium.org>"]
license = "MIT"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["libgpiod", "GPIO", "Linux", "chardev", "ioctl"]
edition = "2021"

[[bin]]
name = "gpio"
path = "src/main.rs"

[dependencies.gpiod]
path = ".."
default-features = false

[dependencies.anyhow]
version = "1"

[dependencies.paw]
version = "1"

[dependencies.structopt]
version = "0.3"
features = ["paw"]

[features]
default = ["v2"]
v2 = ["gpiod/v2"]
