[package]
name = "gpiod-cli"
description = "Linux GPIO character device interfacing (utils)"
version = "0.2.1"
authors = ["K. <kayo@illumium.org>"]
license = "MIT"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["libgpiod", "GPIO", "Linux", "chardev", "ioctl"]
edition = "2021"
publish = false

[[bin]]
name = "gpio"
path = "src/main.rs"

[dependencies.gpiod]
path = ".."
version = "0.2.1"
default-features = false
features = ["clap"]

[dependencies.anyhow]
version = "1"

[dependencies.clap]
version = "3"
features = ["std", "derive"]

[dependencies.clap_complete]
version = "3"
optional = true

[build-dependencies.anyhow]
version = "1"
optional = true

[build-dependencies.gpiod]
path = ".."
version = "0.2.1"
default-features = false
features = ["clap"]
optional = true

[build-dependencies.clap]
version = "3"
features = ["std", "derive"]
optional = true

[build-dependencies.clap_mangen]
version = "0.1"
optional = true

[build-dependencies.clap_complete]
version = "3"
optional = true

[features]
default = ["v2", "man", "complete"]
v2 = ["gpiod/v2"]
man = ["anyhow", "gpiod", "clap", "clap_mangen"]
complete = ["clap_complete"]
