[package]
name = "tokio-gpiod"
description = "Linux GPIO character device interfacing with tokio"
version = "0.2.0"
authors = ["K. <kayo@illumium.org>"]
license = "MIT"
readme = "README.md"
categories = ["os", "os::linux-apis"]
keywords = ["libgpiod", "GPIO", "Linux", "chardev", "ioctl"]
edition = "2021"

[dependencies.gpiod-core]
path = "../core"
version = "0.2.0"
default-features = false

[dependencies.tokio]
version = "1"
default-features = false
features = ["fs", "io-util", "rt", "net"]

[features]
default = ["v2"]
v2 = ["gpiod-core/v2"]

[package.metadata.docs.rs]
features = ["v2"]
