[package]
name = "tokio-gpiod-cli"
description = "Linux GPIO character device interfacing (utils)"
version = "0.2.1"
authors = ["K. <kayo@illumium.org>"]
license = "MIT"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["libgpiod", "GPIO", "Linux", "chardev", "ioctl"]
edition = "2021"
publish = false

[[bin]]
name = "tgpio"
path = "src/main.rs"

[dependencies.tokio-gpiod]
path = "../../tokio"
version = "0.2.1"
default-features = false
features = ["clap"]

[dependencies.gpiod-cli]
path = ".."
version = "0.2.1"
default-features = false
features = ["clap"]

[dependencies.anyhow]
version = "1"

[dependencies.clap]
version = "3"
features = ["std", "derive"]

[dependencies.futures]
version = "0.3"

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "macros"]

[dependencies.clap_complete]
version = "3"
optional = true

[features]
default = ["v2", "complete"]
v2 = ["tokio-gpiod/v2", "gpiod-cli/v2"]
complete = ["clap_complete", "gpiod-cli/complete"]
